2009-07-07 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (IsArrayImpl): Return false always as a
	typebuilder will never represent an array.

	* TypeBuilder.cs (MakeArrayType): Return a new instance of
	ArrayType instead of calling into MonoType machinery.

	* DerivedTypes.cs: New file with all the internal types
	used by SRE to represent derived types from TypeBuilder:
	arrays, pointers and byrefs'.

2009-07-02 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilder.cs: Add IsRun property that returns true if
	any execute mode is enabled.

	* ModuleBuilder.cs: Add set_wrappers_type icall to define which type
	is to be bound to wrappers. Create a new abstract type and call it
	when the assembly is build this way.

	Replace explicit checks for global_type with calls to CreateGlobalType.

	* TypeBuilder.cs: Internal ctor now takes an extra table_idx argument.

2009-06-25  Sylvain Dupont <duposyl@gmail.com>

	* CustomAttributeBuilder.cs: Properly handle element type for safe 
	  arrays (SafeArraySubType marshal attribute option).

	Code is contributed under MIT/X11 license.

2009-06-12  Jb Evain  <jbevain@novell.com>

	* AssemblyBuilder.cs (Save): throw a NotImplementedException
	when asked to emit a pe32+ binary for a AMD64 or IA64
	specific assembly.

2009-06-05  Jb Evain  <jbevain@novell.com>

	* ModuleBuilder.cs (DefineManifestResource): expose during
	BOOTSTRAP_NET_2_0 as well.

2009-06-02 Rodrigo Kumpera  <rkumpera@novell.com>

	* ILGenerator.cs (EmitCall): Under 2.0 profile ignore optional
	arguments if the method call conv is not vararg.

2009-05-22  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyBuilder.cs (.ctor): Error out if the not yet supported 
	RunAndCollect flag was given.

	* AssemblyBuilderAccess.cs: Add RunAndCollect flag for net 4.0.

2009-03-20  Sebastien Pouliot  <sebastien@ximian.com>

	* DynamicMethod.cs (Invoke): Wrap a MethodAccessException inside a
	TargetInvocationException (required for Moonlight 2).
